--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 .terraform/*
 .terraform.lock.hcl
+terraform.tfstate
+.terraform.tfstate.lock.info
+terraform.tfstate.backup
+main.tfplan
+main.destroy.tfplan
